--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -x npm run run -e ts",
-    "run": "tsc && sudo node dist/index.js"
+    "run": "tsc && sudo node dist/index.js",
+    "runDev": "tsc && node dist/index.js"
   },
   "repository": {
     "type": "git",
