--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -x npm run run -e ts",
     "run": "tsc && sudo node dist/index.js",
-    "runDev": "tsc && node dist/index.js"
+    "runDev": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
+    "@types/node-static": "^0.7.7",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
