--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
         "resolveJsonModule": true,
         "sourceMap": true
     },
-    "exclude": ["./node_modules", "app"]
+    "exclude": ["./node_modules", "./app"]
 }
