--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pigpio": "^3.3.1",
+    "react-device-detect": "^2.2.2",
     "ws": "^8.8.1"
   },
   "devDependencies": {
