--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-gesture-responder": "^2.1.0",
     "react-router-dom": "^6.3.0",
