added runLog command

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "a controller program to controll my led strip(s)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -x npm run run -e ts",
+    "start": "npm run run",
     "kill": "sudo killall pigpiod || echo 'no process stopped' && exit",
     "run": "tsc && sudo node dist/index.js ",
+    "runLog": "tsc && sudo node dist/index.js > debug.log",
     "runNoLeds": "tsc && sudo node dist/index.js --noLeds",
     "runWin": "tsc && node --inspect dist/index.js --noLeds --refreshRate 100"
   },
