--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "onoff": "^6.0.3",
     "pigpio": "^3.3.1",
     "react-device-detect": "^2.2.2",
     "ws": "^8.8.1"
