--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "run": "tsc && bash ./util/copyBuild.sh && sudo node dist/index.js ",
     "runLog": "tsc && bash ./util/copyBuild.sh && sudo node dist/index.js > debug.log",
     "runNoLeds": "tsc && bash ./util/copyBuild.sh && sudo node dist/index.js --noLeds",
-    "runWin": "tsc && pwsh ./util/copyBuild.ps1 && node --inspect dist/index.js --noLeds --refreshRate 100"
+    "runWin": "tsc && pwsh ./util/copyBuild.ps1 && node --inspect dist/index.js --noLeds --refreshRate 100",
+    "runBackground": "nohup sudo node dist/ >> app.log 2>&1 &"
   },
   "repository": {
     "type": "git",
